--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,8 +10,9 @@ serde = { version = "1.0", optional = true }
 thiserror = "1.0"
 
 [features]
-default = ["rand", "serde", "cuid2"]
+default = ["cb32u128"]
 rand = ["dep:rand"]
 serde = ["dep:serde"]
 cuid2 = ["radix_fmt", "rand"]
+cb32u128 = []
 radix_fmt = ["dep:radix_fmt"]
